--- a/src/Components/RecruiterMaster/MyProfile.css
+++ b/src/Components/RecruiterMaster/MyProfile.css
@@ -1,6 +1,6 @@
 .top-button {
     margin-top: 7rem;
-    margin-left: 5rem;
+    /* margin-left: 5rem; */
 }
 .top-button  .dropdown-toggle::after{
     display: none !important;
